# workshop-examples-jan-25

./: Cargo.toml
as-ref/src/: main.rs
asref/src/: main.rs
cargotest/: Cargo.toml
cargotest/src/: main.rs
cargotest/tests/: all.rs
cargotestlib/: Cargo.toml  build.rs  text.txt
cargotestlib/src/: lib.rs
cargotestlib/src/print/: mod.rs
chat-axum/: Cargo.toml
chat-axum/src/: lib.rs  main.rs  traits.rs
chat-loop/: Cargo.toml
chat-loop/src/: lib.rs  traits.rs
errorhandling/src/: main.rs
iterators/src/: main.rs
key-value-store/: Cargo.toml
key-value-store/src/: lib.rs  log.rs  log.rs.bak  main.rs
multithreading/: Cargo.toml
multithreading/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
test-criterion/: Cargo.toml
test-criterion/benches/: async_fib.rs  fibonacci_fn.rs  fibonacci_iterator.rs  fibonacci_rec.rs
test-criterion/src/: lib.rs  main.rs
tokio-echo/: Cargo.toml
tokio-echo/src/: main.rs
traits/src/: main.rs
