[package]
name = "cargotest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargotestlib = { path = "../cargotestlib" }
rand = "0.8.5"
serde = "1.0.152"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
