[package]
name = "chat-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
futures = "0.3.26"
async-trait = "0.1.64"
tokio = { version = "1.25.0", features = ["full"] }
