[package]
name = "key-value-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
futures = "0.3.26"
hyper = "0.14.24"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = [
    "auth",
    "add-extension",
    "compression-full",
    "limit",
    "trace",
] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
