[package]
name = "test-criterion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
tokio = "1"

[[bench]]
name = "fibonacci_iterator"
harness = false

[[bench]]
name = "fibonacci_fn"
harness = false

[[bench]]
name = "fibonacci_rec"
harness = false

[[bench]]
name = "async_fib"
harness = false
